Genres bulk creation was added
